--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,17 @@
 /Kernel/*.bi_
 /Kernel/*.bin
-/Kernel/Release
 /DriverPack/*.bin
 /DriverPack/*.bi_
-/DriverPack/Release
 /Image/*.iso
 /Image/*.ima
 /Image/CDRoot/*.bin
 /Image/FloppyRoot/*.bin
+
+ipch
+Release
+Debug
+
 *.suo
-*.obj
 *.pdb
 *.sdf
 *.opensdf
