--- a/DriverPack/DriverPack.vcxproj.filters
+++ b/DriverPack/DriverPack.vcxproj.filters
@@ -132,6 +132,9 @@
     <ClCompile Include="Benchmark.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SysInit.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="API.h">
