* Отправка EOI переведена в ручной режим * Реализована отправка и приём пакетов через адаптер NE2000 * Network.cpp содержит код для отправки ARP пакета

--- a/DriverPack/DriverPack.vcxproj
+++ b/DriverPack/DriverPack.vcxproj
@@ -93,6 +93,8 @@
     <ClCompile Include="Hello.cpp" />
     <ClCompile Include="i8042.cpp" />
     <ClCompile Include="Init.cpp" />
+    <ClCompile Include="NE2000.cpp" />
+    <ClCompile Include="Network.cpp" />
     <ClCompile Include="OpNewDel.cpp" />
     <ClCompile Include="Partition.cpp" />
     <ClCompile Include="PCI.cpp" />
