--- a/DriverPack/DriverPack.vcxproj.filters
+++ b/DriverPack/DriverPack.vcxproj.filters
@@ -132,6 +132,12 @@
     <ClCompile Include="SysInit.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Network.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="NE2000.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="API.h">
