--- a/Kernel/Kernel.vcxproj.filters
+++ b/Kernel/Kernel.vcxproj.filters
@@ -164,5 +164,8 @@
     <ClInclude Include="CRC32.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MemMap.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
