--- a/DriverPack/DriverPack.vcxproj.filters
+++ b/DriverPack/DriverPack.vcxproj.filters
@@ -66,9 +66,6 @@
     <ClCompile Include="i8042.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Init.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="OpNewDel.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -144,7 +141,7 @@
     <ClCompile Include="KeApiTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="GeForce3Ti500Video.cpp">
+    <ClCompile Include="GeForceVideo.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
