Поддержка 5-ти дюймовых дискет на уровне драйвера

--- a/DriverPack/DriverPack.vcxproj
+++ b/DriverPack/DriverPack.vcxproj
@@ -74,7 +74,7 @@
       <Priority>7</Priority>
       <AccessLevel>1</AccessLevel>
     </ClCompile>
-    <ClCompile Include="DMA.cpp">
+    <ClCompile Include="IsaDMA.cpp">
       <Priority>3</Priority>
       <AccessLevel>0</AccessLevel>
     </ClCompile>
